<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PiggyBank</string>
    <string name="total">Total</string>
    <string name="current">Current</string>
    <string name="set_text">Set</string>
    <string name="clear_text">C</string>
    
    <string name="add_stuff_name_label_text">Name:</string>
    <string name="add_stuff_name_hint">Enter name</string>
    <string name="add_stuff_amount_label_text">Need to get:</string>
    <string name="add_stuff_priority_label_text">Priority:</string>
    <string name="add_stuff_note_label_text">Note:</string>
    <string name="add_stuff_note_hint_text">Enter note.</string>
    <string name="add_stuff_alert_title">Couldn\'t add stuff</string>
    <string name="add_stuff_alert_message">Some data is unavailable or wrong. Couldn\'t add stuff.</string>
        
    <string-array name="priority_names">
        <item>Highest</item>
        <item>High</item>
        <item>Middle</item>
        <item>Low</item>
        <item>Lowest</item>
        <item>Ignore</item>
    </string-array>
    
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    
    <string name="estimation_time_unable_to_compute">Unable to compute estimation.</string>
    <string name="estimation_time_complete">You could get it!</string>
    <string name="estimation_time_soon">Could available soon.</string>
    <string name="estimation_time_days">About %d days to complete.</string>
    <string name="estimation_time_hours">About %d hours to complete.</string>
    <string name="estimation_time_minuts">About %d minuts to complete.</string>
    
    <string name="prepared_value_text">Prepared value: %1$s from %2$s.</string>
        
    <string-array name="wish_delete_selection">
        <item>Substract wish amount from total.</item>
        <item>I\'ll specify amount to substract.</item>
        <item>Leave total amount.</item>
    </string-array>
    
    <string name="wish_delete_dialog_title">Select delete option:</string>
        
    <string name="main_menu_about_title">About</string>
    <string name="main_menu_add_wish_title">Add wish</string>
    <string name="main_menu_change_amount_title">Change amount</string>

	<string name="about_title">About PiggyBank</string> 
	<string name="company_name">Copyright (C) 2011 Hangman Corp.</string> 
	<string name="www_address">http://www.hangman/piggybank.ru</string> 
	<string name="about_text">This application is used to manage your resource incomings: money and etc. 
	    You could make some wishies in resourse equivalence, name, note, set priority.
	    List of all you wishies is on main page were you could see wishies progress and estimation time for it.\n\n
	    Program is use your incomings to make some statistic suggestion about wishies estimation time.
	    Estimation time is not accurately, so don\'t rely on it.
	    Accuracy of estimation time depend on program period using long.\n\n
	    PiggyBank developers and designers hope that you enjoy the product and it will help to fulfill your desires.</string>
        
</resources>
