<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/translucentColor"
	    android:orientation="horizontal"
	    android:padding="5dp">"
	    <ImageView
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:layout_gravity="center"
	        android:src="@drawable/icon"/>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="5dp"
	        android:orientation="vertical">
	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColor="@color/aboutTextTitleColor"
	            android:textSize="20sp"
	            android:gravity="center"
	            android:text="@string/about_title"/>
	        <TextView
	            android:id="@+id/aboutVersion"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textSize="18sp"
	            android:textColor="@color/aboutTextTitleColor"/>
	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/www_address"
	            android:textColor="@color/aboutTextTitleColor"/>
		</LinearLayout>
	</LinearLayout>    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:paddingBottom="30dp"
        >
	    <LinearLayout 
	        android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical">
        	<TextView 
	        	android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
    		    android:text="@string/about_text"/>
	    	<TextView 
	        	android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	    	    android:gravity="center"
	    	    android:layout_margin="10dp"
	    	    android:text="@string/company_name"/>    	        
	    </LinearLayout>
    </ScrollView>
</LinearLayout>