<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:text="@string/add_stuff_name_label_text"/>
	    <EditText 
	        android:id="@+id/addStuffNameEditText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginBottom="20dp"
	        android:singleLine="true"
	        android:hint="@string/add_stuff_name_hint"/>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
	        android:layout_marginBottom="20dp"
	        android:layout_gravity="center"
	        android:orientation="vertical">
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:text="@string/add_stuff_amount_label_text"/>
	        <ImageButton 
			    android:id="@+id/add_stuff_amount_plus"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
				android:background="@drawable/button_selector" 
				android:textColor="@color/button_surface"
				android:layout_margin="5dp" 
				android:textSize="24sp"
				android:padding="10dp"
				android:src="@android:drawable/arrow_up_float"/> 
	    	<EditText 
	        	android:id="@+id/addStuffValueEditText"
	    	    android:layout_height="wrap_content"
	    	    android:layout_width="fill_parent"
	        	android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:gravity="center"
	    	    android:text="123 456 789.12"
	    	    android:editable="false"
	    	    android:clickable="true"
	    	    android:focusable="false"
	    	    android:focusableInTouchMode="false"
	    	    />
			<ImageButton 
			    android:id="@+id/add_stuff_amount_minus"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
				android:background="@drawable/button_selector" 
				android:textColor="@color/button_surface"
				android:layout_margin="5dp" 
				android:textSize="24sp"
				android:padding="10dp"
				android:src="@android:drawable/arrow_down_float"/> 
	    </LinearLayout>
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:text="@string/add_stuff_priority_label_text"/>
	    <Spinner
	        android:id="@+id/add_stuff_priority"
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="wrap_content"
	   	    android:layout_marginLeft="10dp"
	   	    android:layout_marginRight="10dp"
	   	    android:layout_marginBottom="20dp"
	        />
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:text="@string/add_stuff_note_label_text"/>
	    <EditText 
	        android:id="@+id/addStuffNoteEditText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginBottom="20dp"
	        android:hint="@string/add_stuff_note_hint_text"/>
	    <TableLayout 
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="wrap_content"
	   	    >
			<TableRow
			    android:id="@+id/add_stuff_button_row"
			    android:gravity="center"
			    android:weightSum="1">
				<ImageButton 
				    android:id="@+id/add_stuff_delete"
				    android:layout_width="0dp"
				    android:layout_height="50dp"
				    android:layout_weight="0.5"
					android:background="@drawable/button_selector" 
					android:textColor="@color/special_button_surface"
					android:layout_margin="5dp" 
					android:textSize="24sp"
					android:padding="10dp"
					android:scaleType="fitCenter"
					android:visibility="gone"
					android:src="@android:drawable/ic_menu_delete"/>
				<ImageButton 
				    android:id="@+id/add_stuff_ok"
				    android:layout_width="0dp"
				    android:layout_weight="0.5"
				    android:layout_height="50dp"
					android:background="@drawable/button_selector" 
					android:textColor="@color/button_surface"
					android:layout_margin="5dp" 
					android:textSize="24sp"
					android:padding="10dp"
					android:src="@android:drawable/ic_input_add"/> 
				<ImageButton 
				    android:id="@+id/add_stuff_cancel"
				    android:layout_width="0dp"
				    android:layout_weight="0.5"
				    android:layout_height="50dp"
					android:background="@drawable/button_selector" 
					android:textColor="@color/special_button_surface"
					android:layout_margin="5dp" 
					android:textSize="24sp"
					android:padding="10dp"
					android:src="@android:drawable/ic_delete"/>
			</TableRow> 
		</TableLayout>
	</LinearLayout>
</ScrollView>